fix for double scroll

--- a/frontend/src/utils/style.css
+++ b/frontend/src/utils/style.css
@@ -239,7 +239,7 @@
   margin-top: -50px;
 }
 .go4160152499 {
-  height: 80vh !important;
+  /* height: 80vh !important; */
   overflow-y: auto !important;
 }
 
@@ -341,8 +341,8 @@
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25) !important;
 }
 
-.go1311524876 {
-  overflow-y: scroll;
+.go1311524876 > div:first-child {
+  height: 100%;
 }
 
 .bp4-control.bp4-switch input ~ .bp4-control-indicator {
